cluster/apps/home/hassio/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: hassio
subsets:
  - addresses:
      - ip: 192.168.2.7
    ports:
      - name: http
        port: 8123
        protocol: TCP
