cluster/apps/home/hassio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hassio
spec:
  ports:
    - name: https
      protocol: TCP
      port: 8123
      targetPort: https
  type: ClusterIP
